apps/echo-istio-ingress/echo_v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
      version: v2
  template:
    metadata:
      labels:
        app: echo
        version: v2
    spec:
      serviceAccountName: echo-v2
      containers:
      - image: docker.io/fl64/echo-http
        imagePullPolicy: IfNotPresent
        name: echo
        ports:
        - containerPort: 8000
          name: http
