apps/echo-istio-ingress/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
    service: echo
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: echo
