apps/echo-istio-ingress/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: echo
  labels:
    app: istio-ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - echo.istio.example.com
