apps/echo-istio-ingress/vs-gw.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo
spec:
  hosts:
    - echo.istio.example.com
  gateways:
  - echo
  http:
  - match:
    - headers:
        x-v2-header:
          exact: "v2"
    route:
    - destination:
        host: echo
        subset: version-v2
  - route:
    - destination:
        host: echo
        subset: version-v1
